// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reactor File Generation > Advanced Mode > generates per-method hooks correctly 1`] = `
"/**
 * MyCanister Reactor (Advanced)
 *
 * Auto-generated by @ic-reactor/codegen
 * Includes reactor instance, actor hooks, and per-method static hooks.
 */

import {
  DisplayReactor,
  createActorHooks,
  createQuery,
  createMutation,
} from "@ic-reactor/react"
import { clientManager } from "../../client"
import { idlFactory, type _SERVICE } from "./declarations/my_canister.did"

type MyCanisterService = _SERVICE

/**
 * MyCanister Reactor — Display mode.
 * Automatically converts bigint → string, Principal → string, etc.
 */
export const myCanisterReactor = new DisplayReactor<MyCanisterService>({
  clientManager,
  idlFactory,
  name: "my_canister",
})

const {
  useActorQuery: useMyCanisterQuery,
  useActorSuspenseQuery: useMyCanisterSuspenseQuery,
  useActorInfiniteQuery: useMyCanisterInfiniteQuery,
  useActorSuspenseInfiniteQuery: useMyCanisterSuspenseInfiniteQuery,
  useActorMutation: useMyCanisterMutation,
  useActorMethod: useMyCanisterMethod,
} = createActorHooks(myCanisterReactor)

export {
  useMyCanisterQuery,
  useMyCanisterSuspenseQuery,
  useMyCanisterInfiniteQuery,
  useMyCanisterSuspenseInfiniteQuery,
  useMyCanisterMutation,
  useMyCanisterMethod,
}

// Per-method static hooks (no-args methods only)

export const listItemsQuery = createQuery(myCanisterReactor, {
  functionName: "list_items",
})

export const updateStatusMutation = createMutation(myCanisterReactor, {
  functionName: "update_status",
})

export { idlFactory }
export type { MyCanisterService }
"
`;

exports[`Reactor File Generation > Fallback Mode > generates correctly without declarations 1`] = `
"/**
 * MyCanister Reactor
 *
 * Auto-generated by @ic-reactor/codegen
 *
 * ⚠️ Declarations were not generated. Run:
 *   npx @icp-sdk/bindgen --input <path-to-did> --output ./my_canister/declarations
 * Then uncomment the import below and remove the fallback type.
 */

import { DisplayReactor, createActorHooks } from "@ic-reactor/react"
import { clientManager } from "../../client"

// TODO: Uncomment after generating declarations:
// import { idlFactory, type _SERVICE as MyCanisterService } from "./declarations/my_canister.did"

// Fallback — replace with generated types
type MyCanisterService = Record<string, (...args: unknown[]) => Promise<unknown>>
// eslint-disable-next-line @typescript-eslint/no-explicit-any
const idlFactory = ({ IDL }: { IDL: any }) => IDL.Service({})

/**
 * MyCanister Reactor — Display mode.
 * Automatically converts bigint → string, Principal → string, etc.
 */
export const myCanisterReactor = new DisplayReactor<MyCanisterService>({
  clientManager,
  idlFactory,
  name: "my_canister",
})

const {
  useActorQuery: useMyCanisterQuery,
  useActorSuspenseQuery: useMyCanisterSuspenseQuery,
  useActorInfiniteQuery: useMyCanisterInfiniteQuery,
  useActorSuspenseInfiniteQuery: useMyCanisterSuspenseInfiniteQuery,
  useActorMutation: useMyCanisterMutation,
  useActorMethod: useMyCanisterMethod,
} = createActorHooks(myCanisterReactor)

export {
  useMyCanisterQuery,
  useMyCanisterSuspenseQuery,
  useMyCanisterInfiniteQuery,
  useMyCanisterSuspenseInfiniteQuery,
  useMyCanisterMutation,
  useMyCanisterMethod,
}

export { idlFactory }
export type { MyCanisterService }
"
`;

exports[`Reactor File Generation > Simple Mode > generates correctly 1`] = `
"/**
 * MyCanister Reactor
 *
 * Auto-generated by @ic-reactor/codegen
 */

import { DisplayReactor, createActorHooks } from "@ic-reactor/react"
import { clientManager } from "../../client"
import { idlFactory, type _SERVICE } from "./declarations/my_canister.did"

export type MyCanisterService = _SERVICE

/**
 * MyCanister Reactor — Display mode.
 * Automatically converts bigint → string, Principal → string, etc.
 */
export const myCanisterReactor = new DisplayReactor<MyCanisterService>({
  clientManager,
  idlFactory,
  name: "my_canister",
})

const {
  useActorQuery: useMyCanisterQuery,
  useActorSuspenseQuery: useMyCanisterSuspenseQuery,
  useActorInfiniteQuery: useMyCanisterInfiniteQuery,
  useActorSuspenseInfiniteQuery: useMyCanisterSuspenseInfiniteQuery,
  useActorMutation: useMyCanisterMutation,
  useActorMethod: useMyCanisterMethod,
} = createActorHooks(myCanisterReactor)

export {
  useMyCanisterQuery,
  useMyCanisterSuspenseQuery,
  useMyCanisterInfiniteQuery,
  useMyCanisterSuspenseInfiniteQuery,
  useMyCanisterMutation,
  useMyCanisterMethod,
}

export { idlFactory }
"
`;
